--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.1.3",
+    "env-cmd": "^10.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
@@ -29,7 +30,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "env-cmd -f .env react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
